--- a/deployment.yml
+++ b/deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: my-app-deployment
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: my-app
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: my-app
-          image: aakibkhan1212/youtube-clone:latest
+          image: dleoma/youtubeslack1:v1
           ports:
             - containerPort: 3000  # Your Node.js application should listen on port 3000
 
